--- a/Io-master/.env
+++ b/Io-master/.env
@@ -1,2 +1,2 @@
-DISCORD_TOKEN=NjcyOTc5MTgyOTU4OTM2MDc1.XjTWvg.Gdpq_RNfXqqGZIm_A08qx7cw9SQ
+DISCORD_TOKEN=NjcyOTc5MTgyOTU4OTM2MDc1.XjXofg.2qyJYsjvKYI6bq2lByTIwpF2eIc
 PORT=5000
